; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_sysctl_check.c_sysctl_check_leaf.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_sysctl_check.c_sysctl_check_leaf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nsproxy = type { i32 }
%struct.ctl_table = type { i32 }

@.str = private unnamed_addr constant [22 x i8] c"Sysctl already exists\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nsproxy*, %struct.ctl_table*, i8**)* @sysctl_check_leaf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sysctl_check_leaf(%struct.nsproxy* %0, %struct.ctl_table* %1, i8** %2) #0 {
  %4 = alloca %struct.nsproxy*, align 8
  %5 = alloca %struct.ctl_table*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca %struct.ctl_table*, align 8
  store %struct.nsproxy* %0, %struct.nsproxy** %4, align 8
  store %struct.ctl_table* %1, %struct.ctl_table** %5, align 8
  store i8** %2, i8*** %6, align 8
  %8 = load %struct.nsproxy*, %struct.nsproxy** %4, align 8
  %9 = load %struct.ctl_table*, %struct.ctl_table** %5, align 8
  %10 = call %struct.ctl_table* @sysctl_check_lookup(%struct.nsproxy* %8, %struct.ctl_table* %9)
  store %struct.ctl_table* %10, %struct.ctl_table** %7, align 8
  %11 = load %struct.ctl_table*, %struct.ctl_table** %7, align 8
  %12 = icmp ne %struct.ctl_table* %11, null
  br i1 %12, label %13, label %21

13:                                               ; preds = %3
  %14 = load %struct.ctl_table*, %struct.ctl_table** %7, align 8
  %15 = load %struct.ctl_table*, %struct.ctl_table** %5, align 8
  %16 = icmp ne %struct.ctl_table* %14, %15
  br i1 %16, label %17, label %21

17:                                               ; preds = %13
  %18 = load i8**, i8*** %6, align 8
  %19 = load %struct.ctl_table*, %struct.ctl_table** %5, align 8
  %20 = call i32 @set_fail(i8** %18, %struct.ctl_table* %19, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  br label %21

21:                                               ; preds = %17, %13, %3
  ret void
}

declare dso_local %struct.ctl_table* @sysctl_check_lookup(%struct.nsproxy*, %struct.ctl_table*) #1

declare dso_local i32 @set_fail(i8**, %struct.ctl_table*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
